# DeepPool

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  cluster.py  clusterClient.py  clusterConfigExample.json  communication.py  genConfigForAwsExperiment.py  genConfigForFastnic.py  gpuProfile.json  gpuProfiler.py  inceptionLayerGpuProfileA100.txt  inceptionLayerGpuProfileA100V2.txt  installPythonPackages.sh  jobDescription.py  logger.py  parallelizationPlanner.py  requirements.txt  resnetLayerGpuProfileA100.txt  resnetLayerGpuProfileA100V2.txt  runnableModule.py  runtime.py  timetrace.py  vggLayerGpuProfileA100.txt  vitLayerGpuProfileA100.txt  wrnLayerGpuProfileA100V2.txt
aws_ec2_tools/: checkEC2status.sh  launchEC2instance.sh  startEC2instance.sh  stopEC2instance.sh  vars.sh
beModules/: vggBgJobB16.json  vggBgJobB32.json  wrnBgJobB16.json  wrnBgJobB32.json
be_training/: .gitignore  be_training.h  best_effort_training.cpp  build_custom_pytorch.sh  common.h  model.cpp  model.h  pytorch.patch  setup.py  torch_be_training.cpp
bench/: .gitignore  bench.cpp  setup.py
csrc/: BeTask.cpp  BeTask.h  CMakeLists.txt  CUDAGraph.cpp  CUDAGraph.h  CUDASleep.cu  CUDASleep.h  CodeLocation.cpp  CodeLocation.h  Cycles.cpp  Cycles.h  GradSync.cpp  GradSync.h  GraphPieces.cpp  GraphPieces.h  Initialize.h  JobContext.cpp  JobContext.h  Manager.cpp  Manager.h  SpinLock.cpp  SpinLock.h  ThreadId.cpp  ThreadId.h  cifar10.h  communication.cpp  communication.h  dataset.cpp  dataset.h  logger.cpp  logger.h  rpcService.cpp  rpcService.h  runnableModule.cpp  runnableModule.h  runtime.cpp  runtime.h  taskManager.cpp  taskManager.h  tracer.h  (+1 more)
csrc/protos/: runtime.proto
examples/: __init__.py  generic.py  inception.py  multiChainTest.py  resnet.py  transformer-test.py  vgg.py  vgg_be.py  vgg_cifar.py  vit.py  wrn.py
logs/: cpprtParser.py
microbenchmark/: simulateSplittedVgg.py  single_serv_multi_proc_nccl.py
modules/: .gitignore
profile/: A100_inception.prof  A100_vgg.prof  A100_wrn.prof
results/: parseTimetrace.py
transformers/models/: __init__.py
transformers/models/gpt2/: modeling_gpt2.py
